# glide

./: .gitignore  README.md  pyproject.toml
.github/workflows/: glide-tests.yml
scripts/: dbd2netcdf.example.sh  glide.l2.example.sh  make_test_fixtures.py  netcdf2csv.example.py
src/glide/: ancillery.py  cli.py  config.py  convert.py  flight.py  gliderdac.py  hotel.py  level2.py  level3.py  process_l1.py  process_l2.py  process_l3.py  profiles.py  qc.py  riot_csv_writer.py
src/glide/assets/: config.yml  core.yml  variable_specification.yml
tests/: conftest.py  test_cli.py  test_config.py  test_convert.py  test_flight.py  test_hotel.py  test_level2.py  test_process_l1.py  test_profiles.py  test_qc.py  test_riot_csv_writer.py
tests/data/: flight_test.l2.csv  osu684.sbd.csv  osu684.tbd.csv  osu685-2025-056-0-27.sbd.csv  osu685-2025-056-0-27.tbd.csv  osu685-2025-056-0-28.sbd.csv  osu685-2025-056-0-28.tbd.csv  osu685-2025-056-0-29.sbd.csv  osu685-2025-056-0-29.tbd.csv  osu685-2025-056-0-30.sbd.csv  osu685-2025-056-0-30.tbd.csv  sl685.dbd.csv  sl685.ebd.csv
